# client

./: BUILD.md  CHANGELOG.md  README.md  SETUP_CI.md  Vagrantfile  bootstrap-core-client.sh  js_hook.sh  version_from_gitlabci.sh
Core/: .coveragerc  .gitignore  .pylintrc  logging-config-development.yml  pytest.ini  requirements.txt  setup.cfg  setup.py  sonar-project.properties
Core/cc/: __init__.py  client.py  crosscloud_admin_tool.py  crypto.py  crypto2.py  ipc_core.py  ipc_gui.py  jsonrpc.py  log_utils.py  mime_type_stream.py  multi.py  path.py  periodic_scheduler.py  qt_client.py  requests_utils.py  settings_sync.py  shell_extension_server.py  synchronization_directory.py  synctask.py  utils.py  winapi.py
Core/doc/: Makefile  arch-overview.dia  arch-overview.rst  build.rst  cc.configuration.rst  cc.rst  cc.synchronization.rst  conf.py  index.rst  make.bat
Core/requirements/: dev.txt  mac.txt
Core/tests/: __init__.py  config.example.json  conftest.py  generate_fsm_graph.py  (+11 more)
MacOsXFinderExtensions/: .gitignore  README.md
WindowsShellExtensions/: .gitignore  CMakeLists.txt  GlobalExportFunctions.def  README.md  build.bat  build.gradle
WindowsShellExtensions/src/CCShellExtContextMenuHandler/cpp/: Ipc.cpp  Ipc.h  Reg.cpp  Reg.h  config.h  dllmain.cpp  tests.cpp
WindowsShellExtensions/src/CCShellExtContextMenuHandler/cpp/ctxmenu/: FileContextMenuExt.cpp  FileContextMenuExt.h
WindowsShellExtensions/src/CCShellExtContextMenuHandler/cpp/overlay/: OverlaySyncedExt.cpp  OverlaySyncedExt.h  OverlayUnSyncedExt.cpp  OverlayUnSyncedExt.h
WindowsShellExtensions/src/CCShellExtContextMenuHandler/cpp/utils/: CGdiPlusBitmap.h  ClassFactory.h  IUnknownRefCtr.h  logging.cpp  logging.h  utils.cpp  utils.h
WindowsShellExtensions/src/CCShellExtContextMenuHandler/resources/: Resource.rc
build-configs/: README.md  cc-testing.json  crosscloud.json  demo.json  novomatic.json  uni-salzburg.json
electron-ui/: .eslintignore  .eslintrc.js  .gitignore  README.md  gulpfile.js  index.html  index.js  package.json  webpack.config.js
git-commit-hooks/: pre-commit.py
helpers/: README.md  logging_example.json  logging_example.yaml  purifier.py
msi-setup/: build.sh  crosscloud.wxs  generate_bundle.py
(+114 files in other folders)
